# jupyter-kernel-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  auto_token_retrieval.py  get_jupyter_token.sh  jupyter_kernel_mcp.py  pyproject.toml  run_server.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py  test_kernel_management.py  test_mcp_tools.py  test_notebook_operations.py  test_utilities.py  test_websocket_connection.py
